--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.21.1",
-    "graphql": "^15.5.0"
+    "apollo-server": "^3.10.2",
+    "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0"
   }
 }
